# amalia-vl-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
lmms_eval/tasks/_task_utils/: pt_common.py
lmms_eval/tasks/ai2d/: ai2d.yaml  ai2d_pt.yaml  utils_pt.py
lmms_eval/tasks/caravela/: _caravela.yaml  _default_template_yaml  caravela_mcq.yaml  caravela_reasoning.yaml  caravela_vqa.yaml  utils.py
lmms_eval/tasks/chartqa/: chartqa.yaml  chartqa_pt.yaml  utils_pt.py
lmms_eval/tasks/coco_cap/: coco2017_cap_pt.yaml  coco2017_cap_val.yaml  utils_pt.py
lmms_eval/tasks/docvqa/: docvqa_pt.yaml  docvqa_val.yaml  utils_pt.py
lmms_eval/tasks/embspatial/: embspatial.yaml  embspatial_pt.yaml
lmms_eval/tasks/infovqa/: infovqa_pt.yaml  infovqa_val.yaml  utils_pt.py
lmms_eval/tasks/mathvision/: mathvision_pt.yaml  mathvision_test.yaml  utils_pt.py
lmms_eval/tasks/mme/: mme.yaml  mme_pt.yaml  utils_pt.py
lmms_eval/tasks/mmmu/: mmmu_pt.yaml  mmmu_val.yaml  utils_pt.py
lmms_eval/tasks/mmmu_pro/: mmmu_pro_pt.yaml  mmmu_pro_standard.yaml
lmms_eval/tasks/mmstar/: mmstar.yaml  mmstar_pt.yaml  utils_pt.py
lmms_eval/tasks/ocrbench/: ocrbench.yaml  ocrbench_pt.yaml  utils_pt.py
lmms_eval/tasks/pope/: pope.yaml  pope_pt.yaml  utils_pt.py
lmms_eval/tasks/portexto/: _default_template_yaml  _portexto_pt.yaml  portexto_handwritten_full_page_pt.yaml  portexto_handwritten_pt.yaml  portexto_in_the_wild_pt.yaml  portexto_synthetic_pt.yaml  utils.py
lmms_eval/tasks/realworldqa/: realworldqa.yaml  realworldqa_pt.yaml
lmms_eval/tasks/refcoco/: refcoco_bbox_pt.yaml  refcoco_bbox_rec_pt.yaml  refcoco_bbox_rec_test.yaml  refcoco_bbox_test.yaml  utils_pt.py  utils_rec_pt.py
lmms_eval/tasks/seedbench/: seedbench.yaml  seedbench_pt.yaml  utils_pt.py
lmms_eval/tasks/textvqa/: textvqa_pt.yaml  textvqa_val.yaml  utils_pt.py
