[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_eval"
version = "0.7.1"
authors = [
    { name = "LMMMs-Lab Evaluation Team", email = "lmms-lab@outlook.com" },
]
description = "A framework for evaluating large multi-modality language models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
# NOTE: Versions are pinned to reproduce the environment used to obtain the
# reported AMALIA-VL results. Packages that were present in that environment are
# pinned exactly; tooling/optional clients absent from it keep loose constraints.
dependencies = [
    "accelerate==1.3.0",
    "black>=24.1.0",
    "isort>=5.13.2",
    "datasets==3.4.1",
    "evaluate==0.4.3",
    "httpx==0.24.1",
    "jsonlines==4.0.0",
    "aiohttp==3.11.12",
    "numexpr",
    "numpy==1.26.4",
    "peft==0.14.0",
    "pybind11>=2.6.2",
    "pytablewriter==1.2.1",
    "sacrebleu==2.5.1",
    "scikit-learn==1.2.2",
    "torch==2.6.0", # to enable sdpa mode for running 34B model on one 80GB GPU
    "torchvision==0.21.0",
    "timm==1.0.15",
    "einops==0.6.1",
    "ftfy",
    "openai==1.62.0",
    "opencv-python-headless==4.11.0.86",
    "av==14.2.0",
    "hf_transfer==0.1.9",
    "nltk==3.9.1",
    "sentencepiece==0.2.0",
    "yt-dlp",
    "pycocoevalcap==1.2",
    "tqdm-multiprocess",
    "transformers==4.57.6",
    "transformers-stream-generator",
    "zstandard",
    "pillow==10.4.0",
    "pyyaml==6.0.2",
    "sympy==1.13.1",
    "latex2sympy2==1.9.1",
    "mpmath==1.3.0",
    "Jinja2==3.1.6",
    "openpyxl",
    "loguru==0.7.3",
    "tenacity==9.0.0",
    "wandb==0.16.6",
    "tiktoken",
    "pre-commit",
    "pydantic==2.10.6",
    "packaging==24.2",
    "zss",
    "protobuf==4.25.6",
    "sentence_transformers==3.4.1",
    "python-dotenv",
    "qwen-vl-utils==0.0.10",
    "math-verify",
]

[project.optional-dependencies]
core = [
    "lmms_eval[server]",
    "lmms_eval[audio]",
    "lmms_eval[metrics]",
]
server = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
]
mcp = [
    "mcp[cli]>=1.20.0",
]
audio = [
    "more-itertools",
    "editdistance",
    "zhconv",
    "librosa",
    "soundfile"
]
metrics = [
    "pywsd",
    "spacy==3.8.4",
    "anls",
    "rouge",
    "capture_metric==0.1.13",
    "Levenshtein",
]
gemini = [
    "google-generativeai",
]
litellm = [
    "litellm",
]
reka = [
    "httpx>=0.23.3",
    "reka-api",
]
qwen = [
    "qwen_vl_utils==0.0.10",
]
mmsearch = [
    "playwright",
    "requests",
    "matplotlib",
    "duckduckgo_search",
    "langchain",
    "langchain-community",
    "beautifulsoup4",
    "FlagEmbedding",
    "rouge",
]
prismmbench = [
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9"
]
tui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
video = [
    "torchcodec>=0.3.0",
    "decord==0.6.0; platform_system != 'Darwin'",
    "eva-decord; platform_system == 'Darwin' and python_version < '3.12'",
]
video-legacy = [
    "decord==0.6.0; platform_system != 'Darwin'",
    "eva-decord; platform_system == 'Darwin' and python_version < '3.12'",
]
# NOTE: 'mcp' is intentionally excluded from [all]: it requires httpx>=0.27.1,
# which conflicts with the pinned httpx==0.24.1 from the results environment
# (which did not include mcp). Install it explicitly with `.[mcp]` if needed,
# accepting that it will upgrade httpx away from the reproduced version.
all = [
    "lmms_eval[core]",
    "lmms_eval[gemini]",
    "lmms_eval[reka]",
    "lmms_eval[qwen]",
    "lmms_eval[mmsearch]",
    "lmms_eval[tui]",
    "lmms_eval[video]",
]

[tool.setuptools.package-data]
"lmms_eval" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]
"lmms_eval.tui.web.dist" = ["**/*"]
"lmms_eval.tui.web.dist.assets" = ["**/*"]

[tool.setuptools.packages.find]
include = ["lmms_eval*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[project.scripts]
lmms-eval = "lmms_eval.cli.dispatch:main"
lmms-eval-mcp = "lmms_eval.mcp:main"
lmms-eval-ui = "lmms_eval.tui.cli:main"

[project.urls]
Homepage = "https://lmms-lab.github.io"
Repository = "https://github.com/EvolvingLMMs-Lab/lmms-eval"

[dependency-groups]
dev = [
    "textual>=7.2.0",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "gpu: requires GPU hardware (deselect with '-m not gpu')",
    "api: requires external API keys (deselect with '-m not api')",
    "slow: slow integration tests (deselect with '-m not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
